--- a/InvitedTalk.html
+++ b/InvitedTalk.html
@@ -34,6 +34,11 @@
 </script>
 <h1>Tutorials, Short Courses and Lecture Series</h1>
 <ul>
+<li><p>Information-Theoretic, Statistical and Algorithmic Foundations of Reinforcement Learning <br /></p>
+<ul>
+<li><p>International Symposium on Information Theory (ISIT) 2024 </p>
+</li></ul>
+</li>
 <li><p><a href="slides/spectral_method_slides.pdf">Spectral Methods for Data Science: A Statistical Perspective</a> <br /></p>
 <ul>
 <li><p>2023 Summer School on Theoretical Statistics, PKU BICMR & Math</p>
@@ -59,7 +64,12 @@
 <li><p>ICSA Applied Statistics Symposium 2021, together with Yuting Wei, Yuejie Chi and Zhengyuan Zhou</p>
 </li></ul>
 </li>
-<li><p><a href="slides/itw2018_tutorial.pdf">Taming nonconvexity in information science</a> <br /></p>
+<li><p>Nonconvex Optimization for High-Dimensional Signal Estimation: Spectral and Iterative Methods</p>
+<ul>
+<li><p>European Signal Processing Conference (EUSIPCO) 2020 <br /></p>
+</li></ul>
+</li>
+<li><p><a href="slides/itw2018_tutorial.pdf">Taming nonconvexity in information science</a> </p>
 <ul>
 <li><p>ITW 2018, together with Yuejie Chi </p>
 </li></ul>
@@ -262,7 +272,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-05 13:41:47 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-04-05 18:01:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="InvitedTalk.jemdoc">source</a>)
 </div>
 </div>
