--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <img src="images/spectral-methods-FnT.jpeg" alt="alt text" width="140 px" height="IMGLINKTARGET" />&nbsp;</td>
 <td align="left"><p>
 <ul>
+    <li>We will teach a tutorial at <a href="https://2024.ieee-isit.org/home">ISIT 2024</a> on reinforcement learning theory (together with Y. Chi and Y. Wei). </li>
+</ul>
+<ul>
     <li><a href="https://link.springer.com/content/pdf/10.1007%2Fs10208-019-09429-9.pdf"> Our paper</a> on implicit regularization in nonconvex statistical estimation
  received the <a href="https://www.siam.org/prizes-recognition/activity-group-prizes/detail/siag-imaging-science-best-paper-prize"> SIAM Activity Group on Imaging Science Best Paper Prize</a>. </li>
 </ul>
@@ -203,7 +206,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-05 13:41:47 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-04-05 18:01:40 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
