--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@ Before moving to UPenn in 2022,
 I was an assistant professor of <a href="http://ece.princeton.edu/">Electrical and Computer Engineering</a>, and an associated faculty member of<a href="https://www.cs.princeton.edu/"> Computer Science</a> and <a href="https://www.pacm.princeton.edu/">Applied and Computational Mathematics</a> at Princeton University from 2017 to 2021. 
 Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to 2017, and obtained my Ph.D. in Electrical Engineering at Stanford University in Jan 2015. 
 </p>
-<p><b>Research areas</b>: nonconvex optimization, statistics, reinforcement learning,  information theory,   and their applications to medical imaging, power electronics, and computational biology.</p>
 <p><b>Contact:</b> <br />
 313 Academic Research Building <br />
 265 South 37th Street, Philadelphia, PA 19104 <br /></p>
@@ -53,7 +52,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </td></tr></table>
 
 <h2>Openings</h2>
-<p>I'm looking for highly motivated postdocs and Ph. D. students with strong mathematical background and interest in machine learning theory (particularly reinforcement learning, diffusion models, and LLM),   statistics, and optimization. </p>
+<p>I'm looking for highly motivated postdocs and Ph. D. students with strong mathematical background and interest in machine learning theory (particularly diffusion models, and LLM),   statistics, and optimization. </p>
 <h2>Recent news</h2>
 
 <table class="imgtable"><tr><td>
@@ -206,7 +205,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-05 18:01:40 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-04-05 18:03:52 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
