--- a/Publications_year.html
+++ b/Publications_year.html
@@ -54,7 +54,7 @@
 <h2>2024</h2>
 <ol>
 <li><p><b>Accelerating Convergence of Score-Based Diffusion Models, Provably</b> <br />
-G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, 2024 (*=equal contributions). <a href="publications/AccDiffusion.pdf">[paper]</a>
+G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, 2024 (*=equal contributions). <a href="publications/AccDiffusion.pdf">[paper]</a><a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p><b>Horizon-Free Regret for Linear Markov Decision Processes</b> <br />
@@ -76,7 +76,7 @@ Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, 2023. <a href="publications/Opti
 </p>
 </li>
 <li><p><b>Towards Faster Non-Asymptotic Convergence for Diffusion-Based Generative Models</b> <br />
-G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, 2023. <a href="publications/DiffusionSGM.pdf">[paper]</a>
+G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, 2023. <a href="publications/DiffusionSGM.pdf">[paper]</a><a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in ICLR 2024
 </p>
 </li>
@@ -324,7 +324,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-05 18:03:52 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-04-24 20:46:09 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
