--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p><b>Machine learning theory</b>
 </p>
 <ul>
-<li><p>G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, <a href="publications/AccDiffusion.pdf">&ldquo;Accelerating convergence of score-based diffusion models, provably,&rdquo;</a> 2024 (*=equal contributions).
+<li><p>G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, <a href="publications/AccDiffusion.pdf">&ldquo;Accelerating convergence of score-based diffusion models, provably,&rdquo;</a> 2024 (*=equal contributions). <a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p>Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du, J. D. Lee, <a href="publications/MDL.pdf">&ldquo;Optimal multi-distribution learning,&rdquo;</a> 2023. <a href="slides/MDL_slides.pdf">[slides]</a>
@@ -115,7 +115,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p>Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, <a href="publications/Optimal-OnlineRL.pdf">&ldquo;Settling the sample complexity of online reinforcement learning,&rdquo;</a> 2023. <a href="slides/Optimal_OnlineRL_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p>G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, <a href="publications/DiffusionSGM.pdf">&ldquo;Towards faster non-asymptotic convergence for diffusion-based generative models,&rdquo;</a> 2023 (accepted in part to ICLR 2024). 
+<li><p>G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, <a href="publications/DiffusionSGM.pdf">&ldquo;Towards faster non-asymptotic convergence for diffusion-based generative models,&rdquo;</a> 2023 (accepted in part to ICLR 2024). <a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p>G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, <a href="publications/Reward-free-exploration.pdf">&ldquo;Minimax-optimal reward-agnostic exploration in reinforcement learning,&rdquo;</a> 2023. 
@@ -205,7 +205,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-05 18:03:52 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-04-24 20:46:09 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
