--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
  as an Assistant Professor in Fall 2024. Congrats, Yuchen! </li>
 </ul>
 <ul>
+    <li><a href="https://scholar.google.com/citations?user=K59VclwAAAAJ&hl=en"> Hong Hu</a> will join WUSTL 
+ as an Assistant Professor in Fall 2024. Congrats, Hong! </li>
+</ul>
+<ul>
     <li><a href="https://yulingy.github.io/"> Yuling Yan</a> received the IMS Lawrence D. Brown Ph. D. Student Award and the ICCM Best Thesis Award (silver medal). Congrats, Yuling! </li>
 </ul>
 <ul>
@@ -205,7 +209,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-24 20:46:09 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-04-29 22:52:37 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
