--- a/Group.html
+++ b/Group.html
@@ -38,7 +38,7 @@
 <li><p><a href="https://jagterberg.github.io/">Joshua Agterberg</a> (Postdoc, co-advised with Rene Vidal; Incoming Faculty, University of Illinois Urbana-Champaign)
 </p>
 </li>
-<li><p><a href="https://scholar.google.com/citations?user=K59VclwAAAAJ&amp;hl=en">Hong Hu</a> (Postdoc, co-advised with Yuting Wei)</p>
+<li><p><a href="https://scholar.google.com/citations?user=K59VclwAAAAJ&amp;hl=en">Hong Hu</a> (Postdoc, co-advised with Yuting Wei; Incoming Faculty, Washington University in St. Louis)</p>
 </li>
 <li><p>Jack Ji (ECE PhD student at Princeton, co-advised with Mengdi Wang)
 </p>
@@ -77,7 +77,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-24 20:46:09 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-04-29 22:52:37 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
