--- a/Publications_year.html
+++ b/Publications_year.html
@@ -55,6 +55,7 @@
 <ol>
 <li><p><b>Accelerating Convergence of Score-Based Diffusion Models, Provably</b> <br />
 G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, 2024 (*=equal contributions). <a href="publications/AccDiffusion.pdf">[paper]</a><a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to ICML 2024
 </p>
 </li>
 <li><p><b>Horizon-Free Regret for Linear Markov Decision Processes</b> <br />
@@ -324,7 +325,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-29 22:52:38 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-05-01 21:03:49 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
