--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p><b>Machine learning theory</b>
 </p>
 <ul>
-<li><p>G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, <a href="publications/AccDiffusion.pdf">&ldquo;Accelerating convergence of score-based diffusion models, provably,&rdquo;</a> 2024 (*=equal contributions). <a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
+<li><p>G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, <a href="publications/AccDiffusion.pdf">&ldquo;Accelerating convergence of score-based diffusion models, provably,&rdquo;</a> 2024 (*=equal contributions; accepted in part to ICML 2024). <a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p>Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du, J. D. Lee, <a href="publications/MDL.pdf">&ldquo;Optimal multi-distribution learning,&rdquo;</a> 2023. <a href="slides/MDL_slides.pdf">[slides]</a>
@@ -209,7 +209,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-29 22:52:37 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-05-01 21:03:48 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
