--- a/Publications_year.html
+++ b/Publications_year.html
@@ -66,6 +66,7 @@ Zihan Zhang, Jason D. Lee, <u>Y. Chen</u>, Simon S. Du, <i>International Confere
 <ol>
 <li><p><b>Optimal Multi-Distribution Learning</b> <br />
 Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du,  J. D. Lee, 2023. <a href="publications/MDL.pdf">[paper]</a><a href="slides/MDL_slides.pdf">[slides]</a>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to COLT 2024
 </p>
 </li>
 <li><p><b>Heteroskedastic Tensor Clustering</b> <br />
@@ -74,6 +75,7 @@ Y. Zhou, <u>Y. Chen</u>,  2023 <a href="publications/tensor_clustering.pdf">[pap
 </li>
 <li><p><b>Settling the Sample Complexity of Online Reinforcement Learning</b> <br />
 Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, 2023. <a href="publications/Optimal-OnlineRL.pdf">[paper]</a><a href="slides/Optimal_OnlineRL_slides.pdf">[slides]</a>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to COLT 2024
 </p>
 </li>
 <li><p><b>Towards Faster Non-Asymptotic Convergence for Diffusion-Based Generative Models</b> <br />
@@ -87,6 +89,7 @@ T. Yang, S. Cen, Y. Wei, <u>Y. Chen</u>, Y. Chi, 2023 <a href="publications/Fede
 </li>
 <li><p><b>Minimax-Optimal Reward-Agnostic Exploration in Reinforcement Learning</b> <br />
 G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, 2023. <a href="publications/Reward-free-exploration.pdf">[paper]</a>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to COLT 2024
 </p>
 </li>
 <li><p><b>Deflated HeteroPCA: Overcoming the Curse of Ill-Conditioning in Heteroskedastic PCA</b> <br />
@@ -325,7 +328,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-01 21:03:49 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-05-08 10:16:04 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
