--- a/index.html
+++ b/index.html
@@ -113,16 +113,16 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p>G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, <a href="publications/AccDiffusion.pdf">&ldquo;Accelerating convergence of score-based diffusion models, provably,&rdquo;</a> 2024 (*=equal contributions; accepted in part to ICML 2024). <a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p>Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du, J. D. Lee, <a href="publications/MDL.pdf">&ldquo;Optimal multi-distribution learning,&rdquo;</a> 2023. <a href="slides/MDL_slides.pdf">[slides]</a>
+<li><p>Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du, J. D. Lee, <a href="publications/MDL.pdf">&ldquo;Optimal multi-distribution learning,&rdquo;</a> 2023 (accepted in part to COLT 2024). <a href="slides/MDL_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p>Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, <a href="publications/Optimal-OnlineRL.pdf">&ldquo;Settling the sample complexity of online reinforcement learning,&rdquo;</a> 2023. <a href="slides/Optimal_OnlineRL_slides.pdf">[slides]</a>
+<li><p>Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, <a href="publications/Optimal-OnlineRL.pdf">&ldquo;Settling the sample complexity of online reinforcement learning,&rdquo;</a> 2023 (accepted in part to COLT 2024). <a href="slides/Optimal_OnlineRL_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p>G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, <a href="publications/DiffusionSGM.pdf">&ldquo;Towards faster non-asymptotic convergence for diffusion-based generative models,&rdquo;</a> 2023 (accepted in part to ICLR 2024). <a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p>G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, <a href="publications/Reward-free-exploration.pdf">&ldquo;Minimax-optimal reward-agnostic exploration in reinforcement learning,&rdquo;</a> 2023. 
+<li><p>G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, <a href="publications/Reward-free-exploration.pdf">&ldquo;Minimax-optimal reward-agnostic exploration in reinforcement learning,&rdquo;</a> 2023 (accepted in part to COLT 2024). 
 </p>
 </li>
 <li><p>G. Li, L. Shi, <u>Y. Chen</u>, Y. Chi, Y. Wei,   <a href="publications/offline_modelbased.pdf">&ldquo;Settling the sample complexity of model-based offline reinforcement learning,&rdquo;</a> <i>Annals of Statistics</i>, vol. 52, no. 1, pp. 233-260, 2024. <a href="publications/offline_modelbased.pdf">[paper]</a><a href="https://projecteuclid.org/journals/annals-of-statistics/volume-52/issue-1/Settling-the-sample-complexity-of-model-based-offline-reinforcement-learning/10.1214/23-AOS2342.full">[AoS version]</a>
@@ -209,7 +209,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-01 21:03:48 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-05-08 10:16:04 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
