--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <ul>
     <li><a href="https://link.springer.com/content/pdf/10.1007%2Fs10208-019-09429-9.pdf"> Our paper</a> on implicit regularization in nonconvex statistical estimation
- received the <a href="https://www.siam.org/prizes-recognition/activity-group-prizes/detail/siag-imaging-science-best-paper-prize"> SIAM Activity Group on Imaging Science Best Paper Prize</a>. </li>
+ received the <a href="https://www.siam.org/prizes-recognition/activity-group-prizes/detail/siag-imaging-science-best-paper-prize"> SIAM Activity Group on Imaging Science Best Paper Prize</a> <a href="https://sinews.siam.org/Details-Page/may-prize-spotlight#Chen-et-al">(SIAM news)</a>. </li>
 </ul>
 <ul>
     <li><a href="https://yuchenzhou-stat.github.io/"> Yuchen Zhou</a> will join UIUC 
@@ -209,7 +209,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-08 10:16:04 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-05-09 23:10:55 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
