--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p>Y. Zhou, <u>Y. Chen</u>, <a href="publications/deflated_heteroPCA.pdf">&ldquo;Deflated HeteroPCA: Overcoming the curse of ill-conditioning in heteroskedastic PCA,&rdquo;</a> 2023. <a href="publications/deflated_heteroPCA.pdf">[ArXiv]</a><a href="slides/Deflated_HeteroPCA_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p>Y. Yan, <u>Y. Chen</u>, J. Fan, <a href="publications/Denoising_PCA_inference.pdf">&ldquo;Inference for heteroskedastic PCA with missing data,&rdquo;</a> accepted to <i>Annals of Statistics</i>, vol. 52, no. 2, pp. 729-756, 2024. <a href="publications/Denoising_PCA_inference.pdf">[ArXiv]</a><a href="slides/PCA_Inference_short.pdf">[slides]</a>
+<li><p>Y. Yan, <u>Y. Chen</u>, J. Fan, <a href="publications/Denoising_PCA_inference.pdf">&ldquo;Inference for heteroskedastic PCA with missing data,&rdquo;</a> <i>Annals of Statistics</i>, vol. 52, no. 2, pp. 729-756, 2024. <a href="publications/Denoising_PCA_inference.pdf">[ArXiv]</a><a href="slides/PCA_Inference_short.pdf">[slides]</a>
 
 
 
@@ -209,7 +209,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-10 10:38:14 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-05-10 10:38:53 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
