--- a/Publications_year.html
+++ b/Publications_year.html
@@ -160,7 +160,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, <i>SIAM Journal 
 </p>
 </li>
 <li><p><b>Inference for Heteroskedastic PCA with Missing Data</b> <br />
-Y. Yan, <u>Y. Chen</u>, J. Fan, <i>Annals of Statistics</i>, vol. 52, no. 2, pp. 729-756, 2024. <a href="publications/Denoising_PCA_inference.pdf">[paper]</a><a href="slides/PCA_Inference_short.pdf">[slides]</a>
+Y. Yan, <u>Y. Chen</u>, J. Fan, <i>Annals of Statistics</i>, vol. 52, no. 2, pp. 729-756, 2024. <a href="publications/Denoising_PCA_inference.pdf">[ArXiv]</a><a href="https://projecteuclid.org/journals/annals-of-statistics/volume-52/issue-2/Inference-for-heteroskedastic-PCA-with-missing-data/10.1214/24-AOS2366.full">[AoS version]</a><a href="slides/PCA_Inference_short.pdf">[slides]</a>
 </p>
 </li>
 <li><p><b>Breaking the Sample Complexity Barrier to Regret-Optimal Model-free Reinforcement Learning</b> <br />
@@ -328,7 +328,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-10 10:41:03 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-05-12 15:17:01 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
