--- a/Publications_year.html
+++ b/Publications_year.html
@@ -105,7 +105,7 @@ L. Shi, G. Li, Y. Wei, <u>Y. Chen</u>, M. Geist, Y. Chi, <i>Neural Information P
 </p>
 </li>
 <li><p><b>Fast Computation of Optimal Transport via Entropy-Regularized Extragradient Methods</b> <br />
-G. Li, Y. Chen, Y. Chi, H. V. Poor, <u>Y. Chen</u>,  2023 <a href="publications/OT_game.pdf">[paper]</a>
+G. Li, Y. Chen, Y. Huang, Y. Chi, H. V. Poor, <u>Y. Chen</u>,  2023 <a href="publications/OT_game.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Why MagNet: Quantifying the Complexity of Modeling Power Magnetic Material Characteristics</b> <br />
@@ -328,7 +328,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-12 15:17:01 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-06-20 23:32:53 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
