--- a/InvitedTalk.html
+++ b/InvitedTalk.html
@@ -272,7 +272,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-12 15:17:01 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-06-20 23:32:53 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="InvitedTalk.jemdoc">source</a>)
 </div>
 </div>
