--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-12 15:17:01 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-06-20 23:32:53 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
