--- a/Publications_year.html
+++ b/Publications_year.html
@@ -88,7 +88,7 @@ T. Yang, S. Cen, Y. Wei, <u>Y. Chen</u>, Y. Chi, 2023 <a href="publications/Fede
 </p>
 </li>
 <li><p><b>Minimax-Optimal Reward-Agnostic Exploration in Reinforcement Learning</b> <br />
-G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, 2023. <a href="publications/Reward-free-exploration.pdf">[paper]</a>
+G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, 2023. <a href="publications/Reward-free-exploration.pdf">[paper]</a><a href="slides/RFE_slides.pdf">[slides]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to COLT 2024
 </p>
 </li>
@@ -328,7 +328,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-06-20 23:34:29 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-06-22 15:13:39 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
