--- a/Publications_year.html
+++ b/Publications_year.html
@@ -70,7 +70,7 @@ Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du,  J. D. Lee, 2023. <a href="publicat
 </p>
 </li>
 <li><p><b>Heteroskedastic Tensor Clustering</b> <br />
-Y. Zhou, <u>Y. Chen</u>,  2023 <a href="publications/tensor_clustering.pdf">[paper]</a>
+Y. Zhou, <u>Y. Chen</u>,  2023 <a href="publications/tensor_clustering.pdf">[paper]</a><a href="slides/tensor_clusteing_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p><b>Settling the Sample Complexity of Online Reinforcement Learning</b> <br />
@@ -328,7 +328,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-06-22 15:13:58 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-06-22 16:17:41 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
