--- a/InvitedTalk.html
+++ b/InvitedTalk.html
@@ -34,7 +34,7 @@
 </script>
 <h1>Tutorials, Short Courses and Lecture Series</h1>
 <ul>
-<li><p>Information-Theoretic, Statistical and Algorithmic Foundations of Reinforcement Learning <br /></p>
+<li><p><a href="slides/ISIT2024_RL_tutorial.pdf">Information-Theoretic, Statistical and Algorithmic Foundations of Reinforcement Learning</a> <br /></p>
 <ul>
 <li><p>International Symposium on Information Theory (ISIT) 2024 </p>
 </li></ul>
@@ -272,7 +272,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-06-22 21:07:35 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-07-07 21:18:20 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="InvitedTalk.jemdoc">source</a>)
 </div>
 </div>
