--- a/Publications_year.html
+++ b/Publications_year.html
@@ -53,6 +53,10 @@
 
 <h2>2024</h2>
 <ol>
+<li><p><b>A Sharp Convergence Theory for The Probability Flow ODEs of Diffusion Models</b> <br />
+G. Li, Y. Wei, Y. Chi, <u>Y. Chen</u>, 2024. <a href="publications/DiffusionODE.pdf">[paper]</a><a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
+</p>
+</li>
 <li><p><b>Accelerating Convergence of Score-Based Diffusion Models, Provably</b> <br />
 G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, 2024 (*=equal contributions). <a href="publications/AccDiffusion.pdf">[paper]</a><a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to ICML 2024
@@ -328,7 +332,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-07-13 22:40:29 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-08-05 16:00:09 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
