--- a/index.html
+++ b/index.html
@@ -107,10 +107,13 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 <li><p><b>Diffusion models</b>
 </p>
 <ul>
-<li><p>G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, <a href="publications/AccDiffusion.pdf">&ldquo;Accelerating convergence of score-based diffusion models, provably,&rdquo;</a> 2024 (*=equal contributions; accepted in part to ICML 2024). <a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
+<li><p>G. Li, Y. Wei, Y. Chi, <u>Y. Chen</u>, <a href="publications/DiffusionODE.pdf">&ldquo;A sharp convergence theory for
+the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p>G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, <a href="publications/DiffusionSGM.pdf">&ldquo;Towards faster non-asymptotic convergence for diffusion-based generative models,&rdquo;</a> 2023 (accepted in part to ICLR 2024). <a href="slides/Acc_diffusion_slides.pdf">[slides]</a></p>
+<li><p>G. Li*, Y. Huang*, T. Efimov, Y. Wei, Y. Chi, <u>Y. Chen</u>, <a href="publications/AccDiffusion.pdf">&ldquo;Accelerating convergence of score-based diffusion models, provably,&rdquo;</a> 2024 (*=equal contributions; accepted in part to ICML 2024). <a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
+
+</p>
 </li>
 </ul>
 
@@ -220,7 +223,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-07-13 22:40:29 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-08-05 16:00:08 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
