--- a/index.html
+++ b/index.html
@@ -64,12 +64,17 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
  received the <a href="https://www.siam.org/prizes-recognition/activity-group-prizes/detail/siag-imaging-science-best-paper-prize"> SIAM Activity Group on Imaging Science Best Paper Prize</a> <a href="https://sinews.siam.org/Details-Page/may-prize-spotlight#Chen-et-al">(SIAM news)</a>. </li>
 </ul>
 <ul>
-    <li><a href="https://yuchenzhou-stat.github.io/"> Yuchen Zhou</a> will join UIUC 
- as an Assistant Professor in Fall 2024. Congrats, Yuchen! </li>
+    <li><a href="https://ieeexplore.ieee.org/document/10232863/"> Our paper</a> on MagNet (an ML framework for power magnetics modeling)
+ received the IEEE Transactions on Power Electronics (TPEL) Prize Paper Award (first place). <a href="https://www.princeton.edu/~minjie/magnet.html">(Project webpage by Prof. Minjie Chen's lab)</a>.</li>
+</ul>
+
+<ul>
+    <li><a href="https://yuchenzhou-stat.github.io/"> Yuchen Zhou</a> has joined UIUC 
+ as an Assistant Professor. Congrats, Yuchen! </li>
 </ul>
 <ul>
-    <li><a href="https://scholar.google.com/citations?user=K59VclwAAAAJ&hl=en"> Hong Hu</a> will join WUSTL 
- as an Assistant Professor in Fall 2024. Congrats, Hong! </li>
+    <li><a href="https://scholar.google.com/citations?user=K59VclwAAAAJ&hl=en"> Hong Hu</a> has joined WUSTL 
+ as an Assistant Professor. Congrats, Hong! </li>
 </ul>
 <ul>
     <li><a href="https://yulingy.github.io/"> Yuling Yan</a> received the IMS Lawrence D. Brown Ph. D. Student Award and the ICCM Best Thesis Award (silver medal). Congrats, Yuling! </li>
@@ -81,7 +86,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
     <li><a href="https://ligen12.github.io/"> Gen Li</a> has joined Chinese University of Hong Kong as an Assistant Professor. Congrats, Gen! </li>
 </ul>
 <ul>
-    <li><a href="https://yulingy.github.io/"> Yuling Yan</a> will join University of Wisconsin-Madison as an Assistant Professor in Fall 2024, after being a Norbert Wiener postdoc at MIT (advised by P. Rigollet and M. Wainwright). Congrats, Yuling! </li>
+    <li><a href="https://yulingy.github.io/"> Yuling Yan</a> has joined University of Wisconsin-Madison as an Assistant Professor. Congrats, Yuling! </li>
 </ul>
 <ul>
     <li><a href="https://live-sil-ece-ucsb-edu-v01.pantheonsite.io/"> Qian Yu</a> has joined UCSB as an Assistant Professor. Congrats, Qian! </li>
@@ -223,7 +228,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-14 07:09:27 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-08-14 09:00:20 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
