--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 <ul>
     <li><a href="https://ieeexplore.ieee.org/document/10232863/"> Our paper</a> on MagNet (an ML framework for power magnetics modeling)
- received the IEEE Transactions on Power Electronics (TPEL) Prize Paper Award (first place). <a href="https://www.princeton.edu/~minjie/magnet.html">(Project webpage by Prof. Minjie Chen's lab)</a>.</li>
+ received the IEEE Transactions on Power Electronics Prize Paper Award (first place). <a href="https://www.princeton.edu/~minjie/magnet.html">(Project webpage by Prof. Minjie Chen's lab)</a>.</li>
 </ul>
 
 <ul>
@@ -228,7 +228,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-14 09:00:20 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-08-14 09:00:45 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
