--- a/Publications_year.html
+++ b/Publications_year.html
@@ -119,7 +119,8 @@ D. Serrano, H. Li, S. Wang, T. Guillod, M. Luo, V. Bansal, N. Jha, <u>Y. Chen</u
 </li>
 <li><p><b>How MagNet: Machine Learning Framework for Modeling Power Magnetic Material Characteristics</b> <br />
 H. Li, D. Serrano, T. Guillod, S. Wang, E. Dogariu, A. Nadler, M. Luo, V. Bansal, N. Jha, <u>Y. Chen</u>, C. R. Sullivan, and M. Chen, 
-<i>IEEE Transactions on Power Electronics</i>, vol. 38, no. 12, pp. 15829-15853, Dec. 2023 <a href="https://ieeexplore.ieee.org/abstract/document/10232863/">[paper]</a></p>
+<i>IEEE Transactions on Power Electronics</i>, vol. 38, no. 12, pp. 15829-15853, Dec. 2023 <a href="https://ieeexplore.ieee.org/abstract/document/10232863/">[paper]</a>
+<br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;<b>IEEE Transactions on Power Electronics (TPEL) Prize Paper Award (first place)</b></p>
 </li>
 </ol>
 <h2>2022</h2>
@@ -332,7 +333,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-14 09:00:45 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-08-14 16:04:39 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
