--- a/Group.html
+++ b/Group.html
@@ -38,6 +38,8 @@
 <li><p>Jack Ji (ECE PhD student at Princeton, co-advised with Mengdi Wang)
 </p>
 </li>
+<li><p>Jiadong Liang (Postdoc)</p>
+</li>
 <li><p><a href="https://eshaannichani.com/">Eshaan Nichani</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
 <li><p><a href="https://whzhan99.github.io/">Wenhao Zhan</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
@@ -79,7 +81,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-14 21:58:38 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-08-15 20:51:21 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
