--- a/index.html
+++ b/index.html
@@ -69,27 +69,22 @@ Prior to this, I was a postdoc in Statistics at Stanford University from 2015 to
 </ul>
 
 <ul>
-    <li><a href="https://yuchenzhou-stat.github.io/"> Yuchen Zhou</a> has joined UIUC 
- as an Assistant Professor. Congrats, Yuchen! </li>
+    <li><a href="https://yuchenzhou-stat.github.io/"> Yuchen Zhou</a> joined UIUC 
+ as an Assistant Professor in July 2024. Congrats, Yuchen! </li>
 </ul>
 <ul>
-    <li><a href="https://scholar.google.com/citations?user=K59VclwAAAAJ&hl=en"> Hong Hu</a> has joined WUSTL 
- as an Assistant Professor. Congrats, Hong! </li>
+    <li><a href="https://scholar.google.com/citations?user=K59VclwAAAAJ&hl=en"> Hong Hu</a> joined WUSTL 
+ as an Assistant Professor in August 2024. Congrats, Hong! </li>
+</ul>
+<ul>
+    <li><a href="https://jagterberg.github.io/"> Joshua Agterberg</a> joined UIUC 
+ as an Assistant Professor in August 2024. Congrats, Joshua! </li>
+</ul>
+<ul>
+    <li><a href="https://yulingy.github.io/"> Yuling Yan</a> joined UW-Madison as an Assistant Professor in August 2024. Congrats, Yuling! </li>
 </ul>
 <ul>
     <li><a href="https://yulingy.github.io/"> Yuling Yan</a> received the IMS Lawrence D. Brown Ph. D. Student Award and the ICCM Best Thesis Award (silver medal). Congrats, Yuling! </li>
-</ul>
-<ul>
-    <li><a href="https://cxcai.github.io/"> Changxiao Cai</a> has joined University of Michigan-Ann Arbor as an Assistant Professor. Congrats, Changxiao! </li>
-</ul>
-<ul>
-    <li><a href="https://ligen12.github.io/"> Gen Li</a> has joined Chinese University of Hong Kong as an Assistant Professor. Congrats, Gen! </li>
-</ul>
-<ul>
-    <li><a href="https://yulingy.github.io/"> Yuling Yan</a> has joined University of Wisconsin-Madison as an Assistant Professor. Congrats, Yuling! </li>
-</ul>
-<ul>
-    <li><a href="https://live-sil-ece-ucsb-edu-v01.pantheonsite.io/"> Qian Yu</a> has joined UCSB as an Assistant Professor. Congrats, Qian! </li>
 </ul>
 <ul>
     <li>Our new monograph <a href="publications/SpectralMethods.pdf"> "Spectral Methods for Data Science: A Statistical Perspective" </a> is published in <a href="https://www.nowpublishers.com/article/Details/MAL-079"><i> Foundations and Trends in Machine Learning</i></a>. See <a href="slides/spectral_method_slides.pdf"> slides </a> for PKU summer school on theoretical statistics.  </li>
@@ -228,7 +223,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-15 20:51:20 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-08-15 21:00:16 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
