--- a/Publications_year.html
+++ b/Publications_year.html
@@ -73,10 +73,6 @@ Z. Zhang, W. Zhan, <u>Y. Chen</u>, S. S. Du,  J. D. Lee, 2023. <a href="publicat
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to COLT 2024
 </p>
 </li>
-<li><p><b>Heteroskedastic Tensor Clustering</b> <br />
-Y. Zhou, <u>Y. Chen</u>,  2023 <a href="publications/tensor_clustering.pdf">[paper]</a><a href="slides/tensor_clusteing_slides.pdf">[slides]</a>
-</p>
-</li>
 <li><p><b>Settling the Sample Complexity of Online Reinforcement Learning</b> <br />
 Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, 2023. <a href="publications/Optimal-OnlineRL.pdf">[paper]</a><a href="slides/Optimal_OnlineRL_slides.pdf">[slides]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to COLT 2024
@@ -87,6 +83,14 @@ G. Li, Y. Wei, <u>Y. Chen</u>, Y. Chi, 2023. <a href="publications/DiffusionSGM.
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;appeared in part in ICLR 2024
 </p>
 </li>
+<li><p><b>Deflated HeteroPCA: Overcoming the Curse of Ill-Conditioning in Heteroskedastic PCA</b> <br />
+Y. Zhou, <u>Y. Chen</u>,  accepted to <i>Annals of Statistics</i>, 2024+ <a href="publications/deflated_heteroPCA.pdf">[paper]</a><a href="slides/Deflated_HeteroPCA_slides.pdf">[slides]</a>
+</p>
+</li>
+<li><p><b>Heteroskedastic Tensor Clustering</b> <br />
+Y. Zhou, <u>Y. Chen</u>,  2023 <a href="publications/tensor_clustering.pdf">[paper]</a><a href="slides/tensor_clusteing_slides.pdf">[slides]</a>
+</p>
+</li>
 <li><p><b>Federated Natural Policy Gradient Methods for Multi-task Reinforcement Learning</b> <br />
 T. Yang, S. Cen, Y. Wei, <u>Y. Chen</u>, Y. Chi, 2023 <a href="publications/Federated_multitask_RL.pdf">[paper]</a>
 </p>
@@ -94,10 +98,6 @@ T. Yang, S. Cen, Y. Wei, <u>Y. Chen</u>, Y. Chi, 2023 <a href="publications/Fede
 <li><p><b>Minimax-Optimal Reward-Agnostic Exploration in Reinforcement Learning</b> <br />
 G. Li, Y. Yan, <u>Y. Chen</u>, J. Fan, 2023. <a href="publications/Reward-free-exploration.pdf">[paper]</a><a href="slides/RFE_slides.pdf">[slides]</a>
 <br /> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&#8201;&mdash;&#8201;accepted in part to COLT 2024
-</p>
-</li>
-<li><p><b>Deflated HeteroPCA: Overcoming the Curse of Ill-Conditioning in Heteroskedastic PCA</b> <br />
-Y. Zhou, <u>Y. Chen</u>,  2023 <a href="publications/deflated_heteroPCA.pdf">[paper]</a><a href="slides/Deflated_HeteroPCA_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p><b>Reward-Agnostic Fine-Tuning: Provable Statistical Benefits of Hybrid Reinforcement Learning</b> <br />
@@ -333,7 +333,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-15 21:00:16 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-09-23 14:04:45 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
