--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 <li><p><b>Spectral methods</b>
 </p>
 <ul>
-<li><p>Y. Zhou, <u>Y. Chen</u>, <a href="publications/deflated_heteroPCA.pdf">&ldquo;Deflated HeteroPCA: Overcoming the curse of ill-conditioning in heteroskedastic PCA,&rdquo;</a> 2023. <a href="publications/deflated_heteroPCA.pdf">[ArXiv]</a><a href="slides/Deflated_HeteroPCA_slides.pdf">[slides]</a>
+<li><p>Y. Zhou, <u>Y. Chen</u>, <a href="publications/deflated_heteroPCA.pdf">&ldquo;Deflated HeteroPCA: Overcoming the curse of ill-conditioning in heteroskedastic PCA,&rdquo;</a> accepted to <i>Annals of Statistics</i>, 2024+. <a href="publications/deflated_heteroPCA.pdf">[ArXiv]</a><a href="slides/Deflated_HeteroPCA_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p>Y. Yan, <u>Y. Chen</u>, J. Fan, <a href="publications/Denoising_PCA_inference.pdf">&ldquo;Inference for heteroskedastic PCA with missing data,&rdquo;</a> <i>Annals of Statistics</i>, vol. 52, no. 2, pp. 729-756, 2024. <a href="publications/Denoising_PCA_inference.pdf">[ArXiv]</a><a href="https://projecteuclid.org/journals/annals-of-statistics/volume-52/issue-2/Inference-for-heteroskedastic-PCA-with-missing-data/10.1214/24-AOS2366.full">[AoS version]</a><a href="slides/PCA_Inference_short.pdf">[slides]</a>
@@ -223,7 +223,7 @@ the probability flow ODEs of diffusion models,&rdquo;</a> 2024. <a href="slides/
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-15 21:00:16 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-09-23 14:04:44 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
