--- a/Software.html
+++ b/Software.html
@@ -64,7 +64,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-15 21:00:16 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-09-23 14:04:45 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Software.jemdoc">source</a>)
 </div>
 </div>
