--- a/Workshops.html
+++ b/Workshops.html
@@ -44,7 +44,7 @@
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-15 21:00:17 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-09-23 14:04:45 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Workshops.jemdoc">source</a>)
 </div>
 </div>
