--- a/travel.html
+++ b/travel.html
@@ -226,7 +226,7 @@
 <td align="left"></td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-15 21:00:16 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-09-23 14:04:45 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="travel.jemdoc">source</a>)
 </div>
 </div>
