--- a/Publications_year.html
+++ b/Publications_year.html
@@ -101,7 +101,7 @@ G. Li, Y. Chen, Y. Huang, Y. Chi, H. V. Poor, <u>Y. Chen</u>,  2023 <a href="pub
 </p>
 </li>
 <li><p><b>Federated Natural Policy Gradient Methods for Multi-task Reinforcement Learning</b> <br />
-T. Yang, S. Cen, Y. Wei, <u>Y. Chen</u>, Y. Chi, 2023 <a href="publications/Federated_multitask_RL.pdf">[paper]</a>
+T. Yang, S. Cen, Y. Wei, <u>Y. Chen</u>, Y. Chi, <i>Neural Information Processing Systems (NeurIPS)</i>, December 2024 <a href="publications/Federated_multitask_RL.pdf">[paper]</a>
 </p>
 </li>
 <li><p><b>Reward-Agnostic Fine-Tuning: Provable Statistical Benefits of Hybrid Reinforcement Learning</b> <br />
@@ -333,7 +333,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-09-23 14:25:58 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-09-25 13:20:50 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
