--- a/Publications_year.html
+++ b/Publications_year.html
@@ -53,6 +53,10 @@
 
 <h2>2024</h2>
 <ol>
+<li><p><b>Stochastic Runge-Kutta Methods: Provable Acceleration of Diffusion Models</b> <br />
+Y. Wu, <u>Y. Chen</u>, Y. Wei, 2024. <a href="publications/Stochastic_Runge_Kutta.pdf">[paper]</a>
+</p>
+</li>
 <li><p><b>A Sharp Convergence Theory for The Probability Flow ODEs of Diffusion Models</b> <br />
 G. Li, Y. Wei, Y. Chi, <u>Y. Chen</u>, 2024. <a href="publications/DiffusionODE.pdf">[paper]</a><a href="slides/Acc_diffusion_slides.pdf">[slides]</a>
 </p>
@@ -333,7 +337,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-09-25 13:27:15 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-10-04 13:31:27 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
