--- a/Group.html
+++ b/Group.html
@@ -35,10 +35,15 @@
 <h1>PhD students and postdocs </h1>
 <h2>Current &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h2>
 <ul>
-<li><p>Jack Ji (ECE PhD student at Princeton, co-advised with Mengdi Wang)
-</p>
+<li><p><a href="https://yuhuang42.org/">Yu Huang</a> (Stats PhD student at Wharton, co-advised with Yuting Wei)</p>
+</li>
+<li><p><a href="https://statistics.wharton.upenn.edu/profile/zhihanh/">Zhihan Huang</a> (Stats PhD student at Wharton, co-advised with Yuting Wei)</p>
+</li>
+<li><p>Jack Ji (ECE PhD student at Princeton, co-advised with Mengdi Wang)</p>
 </li>
 <li><p>Jiadong Liang (Postdoc)</p>
+</li>
+<li><p><a href="https://scholar.google.com/citations?user=OoOIVDAAAAAJ&amp;hl=en">Zhanran Lin</a> (Stats PhD student at Wharton, co-advised with Zhimei Ren and Yuting Wei)</p>
 </li>
 <li><p><a href="https://eshaannichani.com/">Eshaan Nichani</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
@@ -81,7 +86,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-10-04 13:31:27 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-10-14 13:43:58 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
